// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses Summary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    10
     
    expenses
     totalling 
    $123.46
  </h2>
</div>
`;

exports[`should correctly render Expenses Summary without expenses 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h2>
</div>
`;
